updated states in questions

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -18,9 +18,60 @@
     <input type="submit" value="Submit" />
 </form>
 
-<h3>Enter your Zip Code</h3>
+<h3>Select your State</h3>
 <form>
-    <input type="text" name="Location" />
+    <select>
+        <option value="0">Alabama</option>
+        <option value="1">Alaska</option>
+        <option value="2">Arizona</option>
+        <option value="3">Arkansas</option>
+        <option value="4">California</option>
+        <option value="5">Colorado</option>
+        <option value="6">Connecticut</option>
+        <option value="7">Delaware</option>
+        <option value="8">Florida</option>
+        <option value="9">Georgia</option>
+        <option value="10">Hawaii</option>
+        <option value="11">Id7aho</option>
+        <option value="12">Illinois</option>
+        <option value="13">Indiana</option>
+        <option value="14">Iowa</option>
+        <option value="15">Kansas</option>
+        <option value="16">Kentucky</option>
+        <option value="17">Maine</option>
+        <option value="18">Maryland</option>
+        <option value="19">Massachusetts</option>
+        <option value="20">Michigan</option>
+        <option value="21">Minnesota</option>
+        <option value="22">Mississippi</option>
+        <option value="23">Missouri</option>
+        <option value="24">Montana</option>
+        <option value="25">Nebraska</option>
+        <option value="26">Nevada</option>
+        <option value="27">New Hampshire</option>
+        <option value="28">New Jersey</option>
+        <option value="29">New Mexico</option>
+        <option value="30">New York</option>
+        <option value="31">North Carolina</option>
+        <option value="32">North Dakota</option>
+        <option value="33">Ohio</option>
+        <option value="34">Oklahoma</option>
+        <option value="35">Oregon</option>
+        <option value="36">Pennsylvania</option>
+        <option value="37">Rhode Island</option>
+        <option value="38">South Carolina</option>
+        <option value="39">South Dakota</option>
+        <option value="40">Tennessee</option>
+        <option value="41">Texas</option>
+        <option value="42">Utah</option>
+        <option value="43">Vermont</option>
+        <option value="44">Virginia</option>
+        <option value="45">Washington</option>
+        <option value="46">West Virginia</option>
+        <option value="47">Wisconsin</option>
+        <option value="48">Wyoming</option>
+        <option value="49">Louisiana</option>
+    </select>
     <input type="submit" value="Submit" />
 </form>
 
@@ -35,7 +86,7 @@
     </form>
 </form>
 
-<h3>Select the number of children you own</h3>
+<h3>Select the number of children you have</h3>
 <form>
     <select>
         <option value="None">None</option>
