City field added

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -32,7 +32,7 @@
         <option value="8">Florida</option>
         <option value="9">Georgia</option>
         <option value="10">Hawaii</option>
-        <option value="11">Id7aho</option>
+        <option value="11">Idaho</option>
         <option value="12">Illinois</option>
         <option value="13">Indiana</option>
         <option value="14">Iowa</option>
@@ -74,8 +74,14 @@
     </select>
     <input type="submit" value="Submit" />
 </form>
+<br />
 
-
+<h3>Enter your City</h3>
+<form>
+    <input type="text" name="City" />
+    <input type="submit" value="Submit" />
+</form>
+<br />
 
 <h3>Select Your Marital Status</h3>
 <form>
