state codes match API

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -21,56 +21,56 @@
 <h3>Select your State</h3>
 <form>
     <select>
-        <option value="0">Alabama</option>
-        <option value="1">Alaska</option>
-        <option value="2">Arizona</option>
-        <option value="3">Arkansas</option>
-        <option value="4">California</option>
-        <option value="5">Colorado</option>
-        <option value="6">Connecticut</option>
-        <option value="7">Delaware</option>
-        <option value="8">Florida</option>
-        <option value="9">Georgia</option>
-        <option value="10">Hawaii</option>
-        <option value="11">Idaho</option>
-        <option value="12">Illinois</option>
-        <option value="13">Indiana</option>
-        <option value="14">Iowa</option>
-        <option value="15">Kansas</option>
-        <option value="16">Kentucky</option>
-        <option value="17">Maine</option>
-        <option value="18">Maryland</option>
-        <option value="19">Massachusetts</option>
-        <option value="20">Michigan</option>
-        <option value="21">Minnesota</option>
-        <option value="22">Mississippi</option>
-        <option value="23">Missouri</option>
-        <option value="24">Montana</option>
-        <option value="25">Nebraska</option>
-        <option value="26">Nevada</option>
-        <option value="27">New Hampshire</option>
-        <option value="28">New Jersey</option>
-        <option value="29">New Mexico</option>
-        <option value="30">New York</option>
-        <option value="31">North Carolina</option>
-        <option value="32">North Dakota</option>
-        <option value="33">Ohio</option>
-        <option value="34">Oklahoma</option>
-        <option value="35">Oregon</option>
-        <option value="36">Pennsylvania</option>
-        <option value="37">Rhode Island</option>
-        <option value="38">South Carolina</option>
-        <option value="39">South Dakota</option>
-        <option value="40">Tennessee</option>
-        <option value="41">Texas</option>
-        <option value="42">Utah</option>
-        <option value="43">Vermont</option>
-        <option value="44">Virginia</option>
-        <option value="45">Washington</option>
-        <option value="46">West Virginia</option>
-        <option value="47">Wisconsin</option>
-        <option value="48">Wyoming</option>
-        <option value="49">Louisiana</option>
+        <option value="01">Alabama</option>
+        <option value="02">Alaska</option>
+        <option value="04">Arizona</option>
+        <option value="05">Arkansas</option>
+        <option value="06">California</option>
+        <option value="08">Colorado</option>
+        <option value="09">Connecticut</option>
+        <option value="10">Delaware</option>
+        <option value="12">Florida</option>
+        <option value="13">Georgia</option>
+        <option value="15">Hawaii</option>
+        <option value="16">Idaho</option>
+        <option value="17">Illinois</option>
+        <option value="18">Indiana</option>
+        <option value="19">Iowa</option>
+        <option value="20">Kansas</option>
+        <option value="21">Kentucky</option>
+        <option value="23">Maine</option>
+        <option value="24">Maryland</option>
+        <option value="25">Massachusetts</option>
+        <option value="26">Michigan</option>
+        <option value="27">Minnesota</option>
+        <option value="28">Mississippi</option>
+        <option value="29">Missouri</option>
+        <option value="30">Montana</option>
+        <option value="31">Nebraska</option>
+        <option value="32">Nevada</option>
+        <option value="33">New Hampshire</option>
+        <option value="34">New Jersey</option>
+        <option value="35">New Mexico</option>
+        <option value="36">New York</option>
+        <option value="37">North Carolina</option>
+        <option value="38">North Dakota</option>
+        <option value="39">Ohio</option>
+        <option value="40">Oklahoma</option>
+        <option value="41">Oregon</option>
+        <option value="42">Pennsylvania</option>
+        <option value="44">Rhode Island</option>
+        <option value="45">South Carolina</option>
+        <option value="46">South Dakota</option>
+        <option value="47">Tennessee</option>
+        <option value="48">Texas</option>
+        <option value="49">Utah</option>
+        <option value="50">Vermont</option>
+        <option value="51">Virginia</option>
+        <option value="53">Washington</option>
+        <option value="54">West Virginia</option>
+        <option value="55">Wisconsin</option>
+        <option value="56">Wyoming</option>
+        <option value="22">Louisiana</option>
     </select>
     <input type="submit" value="Submit" />
 </form>
@@ -81,7 +81,7 @@
     <input type="text" name="City" />
     <input type="submit" value="Submit" />
 </form>
-<br />
+
 
 <h3>Select Your Marital Status</h3>
 <form>
@@ -98,6 +98,19 @@
         <option value="None">None</option>
         <option value="1">1</option>
         <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5+">5+</option>
+    </select>
+    <input type="submit" value="Submit" />
+</form>
+
+<h3>Select your highest level of education</h3>
+<form>
+    <select>
+        <option value="some">Some Highschool</option>
+        <option value="highGrad">Highschool Graduate</option>
+        <option value="someCollege">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5+">5+</option>
