Education fields added

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -74,7 +74,6 @@
     </select>
     <input type="submit" value="Submit" />
 </form>
-<br />
 
 <h3>Enter your City</h3>
 <form>
@@ -108,12 +107,12 @@
 <h3>Select your highest level of education</h3>
 <form>
     <select>
-        <option value="some">Some Highschool</option>
         <option value="highGrad">Highschool Graduate</option>
-        <option value="someCollege">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5+">5+</option>
+        <option value="some">Some Highschool</option>
+        <option value="someCollege">Some College</option>
+        <option value="bachelor">Bachelors</option>
+        <option value="masters">Masters</option>
+        <option value="doctorate">Doctorate</option>
     </select>
     <input type="submit" value="Submit" />
 </form>
