State/Api connection

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -19,8 +19,8 @@
 </form>
 
 <h3>Select your State</h3>
-<form>
-    <select>
+<form action="/Home/apiTest">
+    <select name="state">
         <option value="01">Alabama</option>
         <option value="02">Alaska</option>
         <option value="04">Arizona</option>
