--- a/FinalProject/Content/Site.css
+++ b/FinalProject/Content/Site.css
@@ -3,7 +3,7 @@
     padding-bottom: 20px;
     width: 100%;
     height: 100%;
-    background-image: url('https://ottifox.com/assets/posts/how-to-animate-moods/a-frame-mood-animation-1.gif');
+    /*background-image: url('https://ottifox.com/assets/posts/how-to-animate-moods/a-frame-mood-animation-1.gif');*/
     background-repeat: no-repeat;
     background-size: cover;
 }
