Background image on one page

--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -2,7 +2,17 @@
 @{
     ViewBag.Title = "frontendtemp";
 }
-
+<style>
+    body {
+        padding-top: 50px;
+        padding-bottom: 20px;
+        width: 100%;
+        height: 100%;
+        background-image: url('https://ottifox.com/assets/posts/how-to-animate-moods/a-frame-mood-animation-1.gif');*/
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
 <div class="container-fluid modal-body" style="position: fixed;width: 100%;height: 100%;left: 0;top: 30%;z-index: 10;">
     <h1 class="text-center" style="font-size:60px;color:gainsboro;">Find Out How You Compare to People in Your Local Area!</h1>
     <p><a href="https://asp.net" class="btn btn-block btn-lg" style="">Learn more &raquo;</a></p>
