--- a/FinalProject/Models/HowsLife.Context.tt
+++ b/FinalProject/Models/HowsLife.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"UserInput.edmx";
+const string inputFile = @"HowsLife.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
