--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -12,8 +12,11 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+    h1 {
+       text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px white;
+    }
 </style>
 <div class="container-fluid modal-body" style="position: fixed;width: 100%;height: 100%;left: 0;top: 30%;z-index: 10;">
     <h1 class="text-center" style="font-size:60px;color:gainsboro;">Find Out How You Compare to People in Your Local Area!</h1>
-    <p><a href="https://asp.net" class="btn btn-block btn-lg" style="">Learn more &raquo;</a></p>
+    <p><a href="/Home/QuestionsTemp/" class="btn btn-block btn-lg" style="">Learn more &raquo;</a></p>
 </div>
