--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -5,7 +5,7 @@
 <br />
 <form action="~/Input/SaveInput">
     <h3>Enter your Name</h3>
-    <input type="text" name="name" />
+    <input type="text"([A-Z][a-z]{1,}) name="name" />
     <br />
 
     <h3>Select your Gender</h3>
