client side validation

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -5,7 +5,7 @@
 <br />
 <form action="~/Input/SaveInput">
     <h3>Enter your Name</h3>
-    <input type="text" ([A-Z][a-z]{1,}) name="name" />
+    <input type="text" ([A-Z][a-z]{1,}) name="name" pattern="[a-zA-Z]{2,}\s[a-zA-z]{1,}'?-?[a-zA-Z]{2,}\s?([a-zA-Z]{1,})?" required/>
     <br />
 
     <h3>Select your Gender</h3>
@@ -78,7 +78,7 @@
 
 
     <h3>Enter your City</h3>
-    <input type="text" name="city" />
+    <input type="text" name="city" pattern="[a-zA-Z]+(?:[ '-][a-zA-Z]+)*" required/>
 
     <h3>Select Your Marital Status</h3>
     <input type="radio" name="maritalstatus" value="No" checked> Single<br>
