--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -3,20 +3,12 @@
     ViewBag.Title = "frontendtemp";
 }
 <style>
-    body {
-        padding-top: 50px;
-        padding-bottom: 20px;
-        width: 100%;
-        height: 100%;
-        background-image: url('https://ottifox.com/assets/posts/how-to-animate-moods/a-frame-mood-animation-1.gif');*/
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; background-image: url('https://i.redd.it/810g0l3sgis01.gif'); */ background-repeat: no-repeat; background-size: cover; background-position: top; }
     h1 {
        text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px white;
     }
 </style>
 <div class="container-fluid modal-body" style="position: fixed;width: 100%;height: 100%;left: 0;top: 30%;z-index: 10;">
-    <h1 class="text-center" style="font-size:60px;color:gainsboro;">Find Out How You Compare to People in Your Local Area!</h1>
+    <h1 class="text-center" style="font-size:60px;color:white;">Take The Survey!</h1>
     <p><a href="/Home/QuestionsTemp/" class="btn btn-block btn-lg" style="">Learn more &raquo;</a></p>
 </div>
