using system, other minor fixes

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -113,8 +113,8 @@
         <option value="DP02_0060E">Some Highschool</option>
         <option value="DP02_0061E">Highschool Graduate</option>
         <option value="DP02_0062E">Some College</option>
-        <option value="DP02_0064E">Bachelors</option>
-        <option value="DP02_0065E">Graduate</option>
+        <option value="DP02_0064E">Bachelors Degree</option>
+        <option value="DP02_0065E">Graduate Degree</option>
     </select>
 
     <h3>Select Your Level of Income</h3>
