database break fixes

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -98,9 +98,9 @@
     </select>
 
     <h3>Do you have children?</h3>
-    <select name="numofchildren">
-        <option value="No">No</option>
-        <option value="Yes">Yes</option>
+    <select name="haschildren">
+        <option value="False">No</option>
+        <option value="True">Yes</option>
     </select>
 
 
@@ -138,11 +138,6 @@
     <input type="radio" name="residentialstatus" value="own" checked> Own<br>
     <input type="radio" name="residentialstatus" value="rent"> Rent<br>
     <input type="radio" name="residentialstatus" value="par1"> I live with my parents<br>
-
-    <h3>Estimated home value</h3>
-    <input type="radio" name="homevalue" value="$100,000-$149,999" checked> $100,000-$149,999<br>
-    <input type="radio" name="homevalue" value="$150,000-$199,999"> $150,000-$199,999<br>
-    <input type="radio" name="homevalue" value="$200,000-$249,999"> $200,000-$249,999<br>
     <br />
     <input type="submit" name="Submit" />
 </form>
