major database break fixes

--- a/FinalProject/Views/Home/Questions.cshtml
+++ b/FinalProject/Views/Home/Questions.cshtml
@@ -91,16 +91,16 @@
     <input type="radio" name="maritalstatus" value="DP02_0004E"> Married<br>
     <input type="radio" name="maritalstatus" value="DP02_0010E">Divorced/Seperated
 
-    <h3>Are you currently employed?</h3>
+    @*<h3>Are you currently employed?</h3>
     <select name="employed">
         <option value="DP03_0005E">No</option>
         <option value="DP03_0004E">Yes</option>
-    </select>
+    </select>*@
 
     <h3>Do you have children?</h3>
     <select name="haschildren">
-        <option value="False">No</option>
-        <option value="True">Yes</option>
+        <option value="0">No</option>
+        <option value="1">Yes</option>
     </select>
 
 
