--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -4,17 +4,47 @@
 
 <br />
 
-string UID = User.Identity.GetUserID();
+@*string UID = User.Identity.GetUserID();*@
 
 @*<form action="/Home/GetStateInfo">
         <input type="text" name="state" />
         <input type="submit" value="ENTER" />
     </form>*@
 
-@ViewBag.test1
+@*@ViewBag.test1*@
 
-@*<ul>
-        <li>Total households: @ViewBag.test1[0]</li>
-        <li>Total households with families: @ViewBag.test1[1]</li>
-        <li>Total households with families and children: @ViewBag.test1[2]</li>
-    </ul>*@
+<ul>
+    <li>Total Male: @ViewBag.test1[1]</li>
+    <li>Total Female: @ViewBag.test1[2]</li>
+</ul>
+
+<ul>
+    <li>20 to 24 years: @ViewBag.test1[3]</li>
+    <li>25 to 34 years: @ViewBag.test1[4]</li>
+    <li>35 to 44 years: @ViewBag.test1[5]</li>
+    <li>45 to 54 years: @ViewBag.test1[6]</li>
+    <li>55 to 59 years: @ViewBag.test1[7]</li>
+    <li>60 to 64 years: @ViewBag.test1[8]</li>
+    <li>65 to 74 years: @ViewBag.test1[9]</li>
+    <li>75 to 84 years: @ViewBag.test1[10]</li>
+    <li>85 years and over: @ViewBag.test1[11]</li>
+</ul>
+
+<ul>
+    <li>Less than $10,000: @ViewBag.test1[12]</li>
+    <li>$10,000 to $14,999: @ViewBag.test1[13]</li>
+    <li>$15,000 to $24,999: @ViewBag.test1[14]</li>
+    <li>$25,000 to $34,999: @ViewBag.test1[15]</li>
+    <li>$35,000 to $49,999: @ViewBag.test1[16]</li>
+    <li>$50,000 to $74,999: @ViewBag.test1[17]</li>
+    <li>$75,000 to $99,999: @ViewBag.test1[18]</li>
+    <li>$100,000 to $149,999: @ViewBag.test1[19]</li>
+    <li>$150,000 to $199,999: @ViewBag.test1[20]</li>
+    <li>$200,000 or more: @ViewBag.test1[21]</li>
+
+</ul>
+
+<br/>
+<h3>user name: @ViewBag.userData.name</h3>
+<h3>gender: @ViewBag.userData.gender</h3>
+<h3>income: @ViewBag.userData.incomerange</h3>
