--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -48,3 +48,4 @@
 <h3>user name: @ViewBag.userData.name</h3>
 <h3>gender: @ViewBag.userData.gender</h3>
 <h3>income: @ViewBag.userData.incomerange</h3>
+<h3>age: @ViewBag.userData.age</h3>
