--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 <br/>
 <h3>user name: @ViewBag.userData.name</h3>
 
-<h3>gender: @ViewBag.test1[22]</h3>
-<h3>age: @ViewBag.test1[23]</h3>
-<h3>income: @ViewBag.test1[24]</h3>
+<h3>gender: @ViewBag.GenderLabel</h3>
+<h3>age: @ViewBag.AgeLabel</h3>
+<h3>income: @ViewBag.IncomeLabel</h3>
 
