--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -7,17 +7,17 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
     h1 {
        text-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px white;
     }
-    .btn-primary {
-        color: white;
-        border-color: white;
+    .btn-default {
+        /*//color: white;*/
+        border-color:none;
     }
 
-        .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open, .dropdown-toggle.btn-primary {
+        .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open, .dropdown-toggle.btn-default {
             background-color: white;
             border-color: white;
         }
 </style>
 <div class="container-fluid modal-body" style="position: fixed;width: 100%;height: 100%;left: 0;top: 30%;z-index: 10;">
     <h1 class="text-center" style="font-size:60px;color:white;">Take The Survey!</h1>
-    <p style="text-align:center;"><a href="/Home/QuestionsTemp/" class=" btn-primary btn-lg" style="border:1px solid white; color:White;">Learn more &raquo;</a></p>
+    <p style="text-align:center;"><a href="/Home/QuestionsTemp/" class=" btn-default btn-lg" style="border:1px solid white; color:White;">Learn more &raquo;</a></p>
 </div>
