--- a/FinalProject/Views/Home/NewState.cshtml
+++ b/FinalProject/Views/Home/NewState.cshtml
@@ -49,3 +49,6 @@
         <td>@ViewBag.test1[24]</td>
     </tr>
 </table>
+<br />
+<br />
+<a href="/Home/Index">Go back to your initial results</a>
